examples/pos/auction_rounds/alice.oio
ALICE

channel AUCTIONHOUSE/BID@{H} : (string@{}*int@{H})@{} 1 -> 0;

var max_bid : int@{H} = 432;

AUCTION_STATUS@{} (bid : (string@{H}*int@{H})@{H}) 0 -> 1 {
    oblif snd bid < max_bid && fst bid != "Alice"
    then send(AUCTIONHOUSE/BID, ("Alice", snd bid + 1));
    else skip;
}

AUCTION_OVER@{} (winner : (string@{H}*int@{H})@{H}) {
    print("Auction won by", fst winner);
    print("Winning bid was", snd winner);
    exit();
}
