examples/neg/high_auction/alice.oio
ALICE

channel
    #reach [AUCTIONHOUSE/BID;ALICE/AUCTION_STATUS;BOB/AUCTION_STATUS;ALICE/AUCTION_OVER;BOB/AUCTION_OVER]
    AUCTIONHOUSE/BID@{H} : (string@{}*int@{H})@{};

var bid : int@{H} = 0;
var max_bid : int@{H} = 432;

#reach [AUCTIONHOUSE/BID;ALICE/AUCTION_STATUS;BOB/AUCTION_STATUS;ALICE/AUCTION_OVER;BOB/AUCTION_OVER]
AUCTION_STATUS@{H} (winning_bid : (string@{H}*int@{H})@{H}) {
    oblif fst winning_bid != "Alice"
    then
        oblif snd winning_bid < max_bid 
        then bid ?= snd winning_bid + 1;
        else bid ?= -1;
    else bid ?= 0;
    send(AUCTIONHOUSE/BID, ("Alice", bid));
}

AUCTION_OVER@{H} (winner : (string@{H}*int@{H})@{H}) {
    print("Auction won by", fst winner);
    print("Winning bid was", snd winner);
}
